/*
 * lucene_pending_write_queue.proto
 *
 * This source file is part of the FoundationDB open source project
 *
 * Copyright 2015-2026 Apple Inc. and the FoundationDB project authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";

package com.apple.foundationdb.record.lucene;

option java_outer_classname = "LucenePendingWriteQueueProto";

/**
 * Represents a pending write operation (insert, update, or delete) that was queued
 * because the target partition was locked during a merge operation.
 */
message PendingWriteItem {
  /**
   * The type of operation queued.
   */
  enum OperationType {
    INSERT = 0;   // Insert new document
    UPDATE = 1;   // Update existing document
    DELETE = 2;   // Delete document
  }

  required OperationType operation_type = 1;
  required bytes primary_key = 2;           // Tuple.pack() of the record's primary key
  required int64 enqueue_timestamp = 3;     // System.currentTimeMillis() when queued
  // For INSERT and UPDATE operations: the document fields to index
  repeated DocumentField fields = 4;
}

/**
 * Represents a single field in a Lucene document.
 * Matches LuceneIndexExpressions.DocumentFieldType enum values.
 */
message DocumentField {
  required string field_name = 1;
  required bool stored = 2;
  required bool sorted = 3;

  // Field configuration map (key-value pairs for field-specific settings)
  // Examples: tokenizer settings, analyzer config, etc.
  // Values can be string, boolean, or integer
  map<string, FieldConfigValue> field_configs = 4;

  // Type-safe field value (exactly one must be set)
  // Field types match DocumentFieldType: STRING, TEXT, INT, LONG, DOUBLE, BOOLEAN
  oneof value {
    string string_value = 11;    // STRING field (not Lucene indexed)
    string text_value = 12;      // TEXT field (Lucene indexed)
    int32 int_value = 13;
    int64 long_value = 14;
    double double_value = 15;
    bool boolean_value = 16;
  }
}

/**
 * Wrapper for field configuration values that supports multiple types.
 */
message FieldConfigValue {
  oneof value {
    string string_value = 1;
    bool boolean_value = 2;
    int32 int_value = 3;
  }
}
