/*
 * planner_metrics.proto
 *
 * This source file is part of the FoundationDB open source project
 *
 * Copyright 2021-2025 Apple Inc. and the FoundationDB project authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.apple.foundationdb.relational.yamltests.generated.stats;

option java_outer_classname = "PlannerMetricsProto";

message Entry {
  optional Identifier identifier = 1;
  optional Info info = 2;
}

message Identifier {
  optional string blockName = 1;
  optional string query = 2;
}

message Info {
  optional CountersAndTimers counters_and_timers = 1;
  optional string explain = 2;
  optional string dot = 3;
}

message CountersAndTimers {
  optional int64 task_count = 1;
  optional int64 task_total_time_ns = 2;
  optional int64 transform_count = 3;
  optional int64 transform_time_ns = 4;
  optional int64 transform_yield_count = 5;
  optional int64 insert_time_ns = 6;
  optional int64 insert_new_count = 7;
  optional int64 insert_reused_count = 8;
}
